dark mode style fix

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ footer {
   background-color: #EBE1C6;
   transition: 1s;
   font-family: 'Roboto', sans-serif;
-  color: #EBE1C6;
+  color: #333;
   align-items: center;
   box-sizing: border-box;
 }
